# gym-rct

./: .vimrc  CMakeLists.txt  build.sh  compile_commands.json  pyrct2env.c  rct2env.c  readme.md  run.sh
.config/scenario/: rct2env.sc6  test_big.sc6
OpenRCT2.xcodeproj/: project.pbxproj
src/: Agent.cpp  Agent.h  MANIFEST.in  RCT2Env.pxd  a.out  pyrct2env.pyx  rct2env.cpp  rct2env.pyx  setup.py
src/cy/: setup.py
src/openrct2/: Context.cpp  Context.h  GameState.cpp  GameState.h  PlatformEnvironment.cpp
src/openrct2-cli/: Cli.cpp
src/openrct2-ui/: UiContext.cpp
src/openrct2-ui/windows/: Window.h
src/openrct2/actions/: TrackPlaceAction.hpp
src/openrct2/interface/: Screenshot.cpp  Screenshot.h
src/openrct2/rct2/: S6Importer.cpp
src/openrct2/ride/: Ride.cpp
src/rct2env/: .Env.cpp.swo  Agent.cpp  Agent.h  CMakeLists.txt  Env.cpp  Env.h  EnvContext.cpp  EnvContext.h  RCT2Env.cpp  UiContext.cpp
